--- a/src/pages/index/index.html
+++ b/src/pages/index/index.html
@@ -31,7 +31,7 @@
     <div class="container with-bottom-nav" style="min-height: 667px;">
       <div class="content">
         <!-- <div class="js-image-swiper custom-image-swiper  custom-image-swiper-single" data-images="1"> -->
-          <swipe :lists="bannerList" name='swipe.vue'></swipe>
+          <swipe :lists="bannerList" name='swipe.vue' v-if="bannnerLists"></swipe>
         <!-- </div> -->
         <!-- <a href="https://maijia.youzan.com/mars/notice/detail?id=" class="notice"></a> -->
         <div class="section-title">优店推荐</div>
@@ -71,7 +71,7 @@
           >
               <li v-for="list in lists" :key="list.id">
                 <div class="goods-item">
-                  <a href="https://h5.youzan.com/v2/showcase/goods?alias=2fwig6rnqfq6m&amp;source=yzapp&amp;f_platform=yzapp"></a>
+                  <a :href="'goods.html?id='+list.id"></a>
                     <div class="thumb img-box">
                       <img class="fadeIn" v-bind:src="list.image">
                     </div>
