--- a/src/pages/cart/cart.html
+++ b/src/pages/cart/cart.html
@@ -33,22 +33,28 @@
               v-for="(shop,shopIndex) in lists"
             >
               <div class="header">
-                <div class="select-group js-select-group"><span class="check" :class="{checked:shop.checked}"></span></div> <a
-                  class="shop-title"><i class="custom-store-img">店铺：</i>
-                  {{shop.shopTitle}}</a>
-                <a href="javascript:;" data-type="cart" class="j-edit-list pull-right c-blue font-size-12 edit-list">
-                  <!---->
-                  编辑
+                <div class="select-group js-select-group" @click="selectShop(shop)">
+                  <span class="check" :class="{checked:shop.checked}"></span>
+                </div> 
+                <a class="shop-title">
+                  <i class="custom-store-img">店铺：</i>
+                  {{shop.shopTitle}}
+                </a>
+                <a href="javascript:;" data-type="cart" 
+                  class="j-edit-list pull-right c-blue font-size-12 edit-list"
+                  @click="edit(shop,shopIndex)"
+                >
+                  {{shop.editingMsg}}
                 </a>
               </div>
-              <!---->
               <div>
                 <ul class="js-list block block-list block-list-cart border-0">
                   <li class="block-item block-item-cart"
+                    :class="{editing:shop.editing}"
                     v-for="(good,gooIndex) in shop.goodsList"
                   >
                     <div>
-                      <div class="check-container" @click="selectGood(good)">
+                      <div class="check-container" @click="selectGood(shop,good)">
                         <span class="check" :class="{checked:good.checked}"></span>
                       </div>
                       <div class="name-card clearfix">
@@ -64,21 +70,21 @@
                             {{good.sku}}
                           </p>
                           <!-- 显示状态 -->
-                          <div class="num">
+                          <div class="num" v-show="!shop.editing">
                             ×<span class="num-txt">{{good.number}}</span>
                           </div>
                           <!-- 编辑状态 -->
-                          <div class="num" style="display: none;">
+                          <div class="num" v-show="shop.editing">
                             <div class="quantity">
                               <button type="button" class="minus disabled"></button>
-                              <input type="text" pattern="[0-9]*" class="txt" value="1">
+                              <input type="text" pattern="[0-9]*" class="txt" :value="good.number">
                               <button type="button" class="plus "></button>
                               <div class="response-area response-area-minus"></div>
                               <div class="response-area response-area-plus"></div>
                             </div>
                           </div>
                           <div class="price c-orange">
-                            ¥<span>189.00 </span></div>
+                            ¥<span>{{good.price | currency}} </span></div>
                         </div>
                         <div class="error-box"></div>
                       </div>
@@ -137,21 +143,25 @@
               你需要分开结算每个店铺的商品哦~
             </div>
             <div class="bottom-cart clear-fix">
-              <div class="select-all"><span class="check"></span> 全选
+              <div class="select-all" @click="selectAll">
+                <span class="check" :class="{checked:allSelected}"></span>
+                全选
               </div>
               <!-- 显示状态 -->
-              <div class="total-price" >
-                合计：¥<span class="js-total-price" style="color: rgb(255, 102, 0);">684.99</span>
+              <div class="total-price" v-show="!editingShop">
+                合计：¥<span class="js-total-price" style="color: rgb(255, 102, 0);">{{total | currency}}</span>
                 <p class="c-gray-dark">不含运费</p>
               </div>
-              <button href="javascript:;" disabled
+              <button href="javascript:;" :disabled="!selectLists.length"
+                v-show="!editingShop"
                 class="js-go-pay btn btn-orange-dark font-size-14">
                 结算
               </button>
               <!-- 编辑状态 -->
               <button href="javascript:;" disabled="disabled" 
                 class="j-delete-goods btn font-size-14 btn-red" 
-                style="display: none;">
+                v-show="editingShop"
+              >
                 删除
               </button>
             </div>
