--- a/src/pages/cart/cart.html
+++ b/src/pages/cart/cart.html
@@ -34,7 +34,8 @@
             >
               <div class="header">
                 <div class="select-group js-select-group" @click="selectShop(shop)">
-                  <span class="check" :class="{checked:shop.checked}"></span>
+                  <span class="check" :class="{checked:shop.checked}" v-show="!editingShop"></span>
+                  <span class="check" :class="{checked:shop.removeChecked}"  v-show="editingShop"></span>
                 </div> 
                 <a class="shop-title">
                   <i class="custom-store-img">店铺：</i>
@@ -51,11 +52,12 @@
                 <ul class="js-list block block-list block-list-cart border-0">
                   <li class="block-item block-item-cart"
                     :class="{editing:shop.editing}"
-                    v-for="(good,gooIndex) in shop.goodsList"
+                    v-for="(good,goodIndex) in shop.goodsList"
+
                   >
                     <div>
                       <div class="check-container" @click="selectGood(shop,good)">
-                        <span class="check" :class="{checked:good.checked}"></span>
+                        <span class="check" :class="{checked:editingShop?good.removeChecked:good.checked}"></span>
                       </div>
                       <div class="name-card clearfix">
                         <a :href="'goods.html?id='+ good.id"
@@ -76,11 +78,11 @@
                           <!-- 编辑状态 -->
                           <div class="num" v-show="shop.editing">
                             <div class="quantity">
-                              <button type="button" class="minus disabled"></button>
+                              <button type="button" class="minus" :class= "{disabled:good.number === 1}"></button>
                               <input type="text" pattern="[0-9]*" class="txt" :value="good.number">
                               <button type="button" class="plus "></button>
-                              <div class="response-area response-area-minus"></div>
-                              <div class="response-area response-area-plus"></div>
+                              <div class="response-area response-area-minus" @click="reduce(good)"></div>
+                              <div class="response-area response-area-plus" @click="add(good)"></div>
                             </div>
                           </div>
                           <div class="price c-orange">
@@ -88,7 +90,9 @@
                         </div>
                         <div class="error-box"></div>
                       </div>
-                      <div class="delete-btn"><span>删除</span></div>
+                      <div class="delete-btn" @click="remove(shop,shopIndex,good,goodIndex)">
+                        <span>删除</span>
+                      </div>
                     </div>
                   </li>
                 </ul>
@@ -144,7 +148,7 @@
             </div>
             <div class="bottom-cart clear-fix">
               <div class="select-all" @click="selectAll">
-                <span class="check" :class="{checked:allSelected}"></span>
+                <span class="check" :class="{checked:editingShop ? allRemoveSelected : allSelected}"></span>
                 全选
               </div>
               <!-- 显示状态 -->
@@ -158,7 +162,7 @@
                 结算
               </button>
               <!-- 编辑状态 -->
-              <button href="javascript:;" disabled="disabled" 
+              <button href="javascript:;" :disabled="!removeList.length" 
                 class="j-delete-goods btn font-size-14 btn-red" 
                 v-show="editingShop"
               >
@@ -169,14 +173,30 @@
         </div>
       </div>
     </div>
+    <!-- 遮罩层 -->
+    <div class="van-overlay"
+      v-show="removePopup"
+      style="z-index: 2000;position: fixed;top: 0;left: 0;width: 100%;height: 100%;background-color: rgba(0,0,0,.7);">
+    </div>
+    <!-- 模态框 -->
+    <div class="van-dialog" v-show="removePopup" style="z-index: 2001;">
+      <div class="van-dialog__content">
+        <div class="van-dialog__message">确定删除该商品么？</div>
+      </div>
+      <div class="van-hairline--top van-dialog__footer van-dialog__footer--buttons"><button
+          class="van-button van-button--default van-button--large van-dialog__cancel"><span
+            class="van-button__text">取消</span></button><button
+          class="van-button van-button--default van-button--large van-dialog__confirm van-hairline--left"><span
+            class="van-button__text" @click="removeConfirm">确认</span></button></div>
+    </div>
   </div>
-  <div class="footer" style="min-height: 86px;">
+  <!-- <div class="footer" style="min-height: 86px;">
     <div class="copyright">
       <div class="ft-copyright "
         style="background-image: url(https://img.yzcdn.cn/upload_files/2016/11/15/147918630760182374.png);">
         <a class="yz-logo" href="https://www.youzan.com/?from_source=support_logo">有赞提供技术支持</a> </div>
     </div>
-  </div>
+  </div> -->
 </body>
 
 </html>
